serbia/complex_pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: pavlina-pod
  labels:
    you: me
  # namespace: serbia
spec:
  containers:
    - name: web
      image: registry.access.redhat.com/ubi8/httpd-24:latest
      ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443

    - name: database
      image: registry.access.redhat.com/rhscl/mysql-80-rhel7:latest
      ports:
        - containerPort: 3306
