serbia/dbpod_command.yml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: db-pod
  name: db-pod
spec:
  containers:
  - env:
    - name: MYSQL_USER
      value: pavlina
    - name: MYSQL_DATABASE
      value: ibm
    - name: MYSQL_PASSWORD
      value: mypa55
    - name: MYSQL_ROOT_PASSWORD
      value: r00tpa55
    image: registry.access.redhat.com/rhscl/mysql-80-rhel7:latest
    name: db-pod
    ports:
    - containerPort: 3306
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
