serbia/via_command.yml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: meme
  name: meme
spec:
  containers:
  - image: registry.access.redhat.com/ubi8/httpd-24:latest
    name: check
    resources: {}
  - name: database     
    image: registry.access.redhat.com/rhscl/mysql-80-rhel7:latest
    ports:             
      - containerPort: 3306
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
