serbia/custom-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: custom-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: custom
  template:
    metadata:
      labels:
        app: custom
    spec:
      containers:
        - name: web
          image: registry.access.redhat.com/ubi8/httpd-24:latest
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
    
        - name: database
          image: registry.access.redhat.com/rhscl/mysql-80-rhel7:latest
          ports:
            - containerPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: custom
  name: ibm-app
spec:
  ports:
  - name: port-1
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: custom

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  labels:
    app: custom
  name: ibm-app
spec:
  port:
    targetPort: port-1
  to:
    kind: ""
    name: ibm-app
    weight: null
status: {}
